feat: view에서 serializer 추가
